force-app/main/default/objects/McSmsRouting__mdt/McSmsRouting__mdt.object-meta.xml
<CustomObject>
    <label>MC SMS Routing</label>
    <pluralLabel>MC SMS Routings</pluralLabel>
</CustomObject>