force-app/main/default/objects/McSmsRouting__mdt/fields/AlphaDefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>AlphaDefinitionKey__c</fullName>
    <label>Definition Key (Alphanumeric)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>