force-app/main/default/objects/McSmsRouting__mdt/fields/CountryPrefix__c.field-meta.xml
<CustomField>
    <fullName>CountryPrefix__c</fullName>
    <inlineHelpText>Examples: +45, +46</inlineHelpText>
    <label>E.164 Country Prefix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>