force-app/main/default/objects/McSmsRouting__mdt/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <inlineHelpText>Examples: DKK, SEK</inlineHelpText>
    <label>Currency ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>