force-app/main/default/objects/McSmsRouting__mdt/fields/DefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>DefinitionKey__c</fullName>
    <inlineHelpText>Examples: SMS_TRX_DK, SMS_TRX_SE</inlineHelpText>
    <label>Definition Key (Numeric)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>